--- a/week02_server/pom.xml
+++ b/week02_server/pom.xml
@@ -72,6 +72,12 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/jakarta.json/jakarta.json-api -->
+        <dependency>
+            <groupId>jakarta.json</groupId>
+            <artifactId>jakarta.json-api</artifactId>
+            <version>2.1.2</version>
+        </dependency>
 
     </dependencies>
 
